Merged in feature/CAP-305_transactions-search-api (pull request #359)
Feature/CAP-305 transactions search api

* Merge branch 'master' into feature/CAP-305_transactions-search-api

* Merge branch 'master' into feature/CAP-305_transactions-search-api

* CAP-305 - transaction search api - code review

* Merge branch 'master' into feature/CAP-305_transactions-search-api

* CAP-305 - transaction search api - code review

* CAP-305 - transaction search api - code review - writing test case as a guard case on update account activity with iconref

* Merge branch 'master' into feature/CAP-305_transactions-search-api

* CAP-305 - transaction search api - code review

* CAP-305 - transaction search api - code review

* CAP-305 - transaction search api - code review


Approved-by: Slava Akimov