@@ -2,21 +2,27 @@ package com.clearspend.capital.data.repository.impl;
 
 import com.blazebit.persistence.CriteriaBuilder;
 import com.blazebit.persistence.CriteriaBuilderFactory;
-import com.blazebit.persistence.PagedList;
-import com.blazebit.persistence.PaginatedCriteriaBuilder;
 import com.clearspend.capital.common.data.model.Amount;
 import com.clearspend.capital.common.data.util.SqlResourceLoader;
 import com.clearspend.capital.common.typedid.data.AllocationId;
 import com.clearspend.capital.common.typedid.data.CardId;
+import com.clearspend.capital.common.typedid.data.ReceiptId;
 import com.clearspend.capital.common.typedid.data.TypedId;
 import com.clearspend.capital.common.typedid.data.UserId;
 import com.clearspend.capital.common.typedid.data.business.BusinessId;
+import com.clearspend.capital.crypto.Crypto;
 import com.clearspend.capital.crypto.data.model.embedded.RequiredEncryptedStringWithHash;
 import com.clearspend.capital.data.model.AccountActivity;
 import com.clearspend.capital.data.model.User;
+import com.clearspend.capital.data.model.embedded.CardDetails;
+import com.clearspend.capital.data.model.embedded.ExpenseDetails;
+import com.clearspend.capital.data.model.embedded.MerchantDetails;
+import com.clearspend.capital.data.model.embedded.ReceiptDetails;
+import com.clearspend.capital.data.model.enums.AccountActivityIntegrationSyncStatus;
 import com.clearspend.capital.data.model.enums.AccountActivityStatus;
 import com.clearspend.capital.data.model.enums.AccountActivityType;
 import com.clearspend.capital.data.model.enums.Currency;
+import com.clearspend.capital.data.model.enums.MccGroup;
 import com.clearspend.capital.data.model.enums.MerchantType;
 import com.clearspend.capital.data.model.enums.UserType;
 import com.clearspend.capital.data.repository.AccountActivityRepositoryCustom;
@@ -36,8 +42,12 @@ import com.clearspend.capital.service.type.MerchantCategoryChartData;
 import com.clearspend.capital.service.type.MerchantChartData;
 import com.clearspend.capital.service.type.PageToken;
 import com.clearspend.capital.service.type.UserChartData;
+import com.samskivert.mustache.Mustache;
+import com.samskivert.mustache.Template;
+import java.io.StringWriter;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.sql.Array;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.Timestamp;
@@ -47,17 +57,21 @@ import java.time.ZoneOffset;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
 import javax.persistence.EntityManager;
 import javax.persistence.Tuple;
 import javax.transaction.Transactional;
 import javax.transaction.Transactional.TxType;
 import lombok.NonNull;
-import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.StringUtils;
 import org.hibernate.internal.SessionImpl;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.io.Resource;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
@@ -66,7 +80,6 @@ import org.springframework.stereotype.Repository;
 
 @Slf4j
 @Repository
-@RequiredArgsConstructor
 public class AccountActivityRepositoryImpl implements AccountActivityRepositoryCustom {
 
   public static final int LIMIT_SIZE_FOR_CHART = 5;
@@ -75,90 +88,135 @@ public class AccountActivityRepositoryImpl implements AccountActivityRepositoryC
 
   private final EntityManager entityManager;
   private final CriteriaBuilderFactory criteriaBuilderFactory;
+  private final Crypto crypto;
+
+  private final String findAccountActivityQuery;
+  private final Template template;
+
+  @SneakyThrows
+  public AccountActivityRepositoryImpl(
+      Crypto crypto,
+      EntityManager entityManager,
+      CriteriaBuilderFactory criteriaBuilderFactory,
+      @Value("classpath:db/sql/accountActivityRepository/findAccountActivity.sql")
+          Resource findAccountActivityQuery) {
+    this.entityManager = entityManager;
+    this.criteriaBuilderFactory = criteriaBuilderFactory;
+    this.findAccountActivityQuery = SqlResourceLoader.load(findAccountActivityQuery);
+    this.crypto = crypto;
+    this.template = Mustache.compiler().compile(this.findAccountActivityQuery);
+  }
 
   @Override
   public Page<AccountActivity> find(
       @NonNull TypedId<BusinessId> businessId, AccountActivityFilterCriteria criteria) {
-    // query
-    CriteriaBuilder<AccountActivity> select =
-        criteriaBuilderFactory
-            .create(entityManager, AccountActivity.class, "accountActivity")
-            .select("accountActivity");
 
-    select
-        .whereOr()
-        .where("accountActivity.hideAfter")
-        .ge(OffsetDateTime.now())
-        .where("accountActivity.hideAfter")
-        .isNull()
-        .endOr();
-    select
-        .whereOr()
-        .where("accountActivity.visibleAfter")
-        .le(OffsetDateTime.now())
-        .where("accountActivity.visibleAfter")
-        .isNull()
-        .endOr();
+    criteria.setBusinessId(businessId);
+    StringWriter out = new StringWriter();
+    template.execute(criteria, new JDBCUtils.CountObjectForSqlQuery(false), out);
+    String query = out.toString();
 
-    select.where("accountActivity.businessId").eqLiteral(businessId);
-    BeanUtils.setNotNull(
-        criteria.getUserId(), userId -> select.where("accountActivity.userId").eqLiteral(userId));
-    BeanUtils.setNotNull(
-        criteria.getAllocationId(),
-        allocationId -> select.where("accountActivity.allocationId").eqLiteral(allocationId));
-    BeanUtils.setNotNull(
-        criteria.getCardId(),
-        cardId -> select.where("accountActivity.card.cardId").eqLiteral(cardId));
-    BeanUtils.setNotNull(
-        criteria.getTypes(), types -> select.where("accountActivity.type").in(types));
-    BeanUtils.setNotNull(
-        criteria.getStatuses(), statuses -> select.where("accountActivity.status").in(statuses));
+    List<AccountActivity> result =
+        JDBCUtils.query(
+            entityManager,
+            query,
+            new MapSqlParameterSource(),
+            (resultSet, rowNum) -> {
+              AccountActivity accountActivity =
+                  new AccountActivity(
+                      new TypedId<>(resultSet.getObject("business_id", UUID.class)),
+                      new TypedId<>(resultSet.getObject("allocation_id", UUID.class)),
+                      resultSet.getString("allocation_name"),
+                      new TypedId<>(resultSet.getObject("account_id", UUID.class)),
+                      AccountActivityType.valueOf(resultSet.getString("type")),
+                      AccountActivityStatus.valueOf(resultSet.getString("status")),
+                      resultSet.getObject("activity_time", OffsetDateTime.class),
+                      Amount.of(
+                          Currency.valueOf(resultSet.getString("amount_currency")),
+                          resultSet.getObject("amount_amount", BigDecimal.class)),
+                      Amount.of(
+                          Currency.valueOf(resultSet.getString("requested_amount_currency")),
+                          resultSet.getObject("requested_amount_amount", BigDecimal.class)),
+                      AccountActivityIntegrationSyncStatus.valueOf(
+                          resultSet.getString("integration_sync_status")));
+              accountActivity.setId(new TypedId<>(resultSet.getObject("id", UUID.class)));
+              UUID userId = resultSet.getObject("user_id", UUID.class);
+              BeanUtils.setNotNull(userId, id -> accountActivity.setUserId(new TypedId<>(id)));
+              UUID adjustmentId = resultSet.getObject("adjustment_id", UUID.class);
+              BeanUtils.setNotNull(
+                  adjustmentId, id -> accountActivity.setAdjustmentId(new TypedId<>(id)));
+              accountActivity.setNotes(resultSet.getString("notes"));
+              BigDecimal iconRef = resultSet.getBigDecimal("expense_details_icon_ref");
+              if (iconRef != null) {
+                accountActivity.setExpenseDetails(
+                    new ExpenseDetails(
+                        iconRef.intValue(), resultSet.getString("expense_details_category_name")));
+              }
 
-    if (criteria.getFrom() != null && criteria.getTo() != null) {
-      select
-          .where("accountActivity.activityTime")
-          .between(criteria.getFrom())
-          .and(criteria.getTo());
-    }
+              Array receiptReceiptIds = resultSet.getArray("receipt_receipt_ids");
+              if (receiptReceiptIds != null) {
+                ResultSet rs = receiptReceiptIds.getResultSet();
+                Set<TypedId<ReceiptId>> receiptIds = new HashSet<>();
+                while (rs.next()) {
+                  receiptIds.add(new TypedId<>(rs.getObject(2, UUID.class)));
+                }
 
-    String searchText = criteria.getSearchText();
-    if (StringUtils.isNotEmpty(searchText)) {
-      String likeSearchString = "%" + searchText + "%";
-      select
-          .whereOr()
-          .where("accountActivity.card.lastFour")
-          .like()
-          .value(likeSearchString)
-          .noEscape()
-          .where("accountActivity.merchant.name")
-          .like(false)
-          .value(likeSearchString)
-          .noEscape()
-          .where("CAST_STRING(accountActivity.amount.amount)")
-          .like()
-          .value(likeSearchString)
-          .noEscape()
-          .where("CAST_STRING(accountActivity.activityTime)")
-          .like()
-          .value(likeSearchString)
-          .noEscape()
-          .endOr();
-    }
+                accountActivity.setReceipt(new ReceiptDetails(receiptIds));
+              }
 
-    select.orderByDesc("accountActivity.activityTime");
-    select.orderByDesc("accountActivity.id");
+              UUID cardId = resultSet.getObject("card_card_id", UUID.class);
+              if (cardId != null) {
+                accountActivity.setCard(
+                    new CardDetails(
+                        new TypedId<>(cardId),
+                        resultSet.getString("card_last_four"),
+                        new RequiredEncryptedStringWithHash(
+                            new String(
+                                crypto.decrypt(
+                                    resultSet.getBytes("card_owner_first_name_encrypted")))),
+                        new RequiredEncryptedStringWithHash(
+                            new String(
+                                crypto.decrypt(
+                                    resultSet.getBytes("card_owner_last_name_encrypted")))),
+                        (resultSet.getString("card_external_ref"))));
+              }
+
+              BigDecimal categoryCode = resultSet.getBigDecimal("merchant_merchant_category_code");
+              String merchantName = resultSet.getString("merchant_name");
+              if (merchantName != null && categoryCode != null) {
+                accountActivity.setMerchant(
+                    new MerchantDetails(
+                        merchantName,
+                        MerchantType.valueOf(resultSet.getString("merchant_type")),
+                        resultSet.getString("merchant_merchant_number"),
+                        categoryCode.intValue(),
+                        MccGroup.valueOf(resultSet.getString("merchant_merchant_category_group")),
+                        resultSet.getString("merchant_logo_url"),
+                        resultSet.getBigDecimal("merchant_latitude"),
+                        resultSet.getBigDecimal("merchant_longitude")));
+              }
+
+              accountActivity.setVersion(resultSet.getLong("version"));
+              accountActivity.setCreated(resultSet.getObject("created", OffsetDateTime.class));
+              accountActivity.setUpdated(resultSet.getObject("updated", OffsetDateTime.class));
+
+              return accountActivity;
+            });
 
     PageToken pageToken = criteria.getPageToken();
-    int maxResults = pageToken.getPageSize();
-    int firstResult = pageToken.getPageNumber() * maxResults;
-    PaginatedCriteriaBuilder<AccountActivity> page = select.page(firstResult, maxResults);
-    PagedList<AccountActivity> paged = page.getResultList();
+
+    StringWriter outCounter = new StringWriter();
+    template.execute(criteria, new JDBCUtils.CountObjectForSqlQuery(true), outCounter);
+    long totalElements =
+        JDBCUtils.query(
+                entityManager,
+                outCounter.toString(),
+                new MapSqlParameterSource(),
+                (resultSet, row) -> resultSet.getLong(1))
+            .get(0);
 
     return new PageImpl<>(
-        new ArrayList<>(paged),
-        PageRequest.of(
-            criteria.getPageToken().getPageNumber(), criteria.getPageToken().getPageSize()),
-        paged.getTotalSize());
+        result, PageRequest.of(pageToken.getPageNumber(), pageToken.getPageSize()), totalElements);
   }
 
   @Override
@@ -357,7 +415,7 @@ public class AccountActivityRepositoryImpl implements AccountActivityRepositoryC
                           new Amount(
                               Currency.valueOf(tuple.get(3).toString()),
                               (BigDecimal) tuple.get(2))))
-              .collect(Collectors.toList()),
+              .toList(),
           null,
           null,
           null);
@@ -372,7 +430,7 @@ public class AccountActivityRepositoryImpl implements AccountActivityRepositoryC
                           new Amount(
                               Currency.valueOf(tuple.get(3).toString()),
                               (BigDecimal) tuple.get(2))))
-              .collect(Collectors.toList()),
+              .toList(),
           null,
           null);
 
@@ -391,7 +449,7 @@ public class AccountActivityRepositoryImpl implements AccountActivityRepositoryC
                           tuple.get(0) != null ? tuple.get(0).toString() : "",
                           tuple.get(2) != null ? tuple.get(2).toString() : "",
                           tuple.get(4) != null ? tuple.get(4).toString() : ""))
-              .collect(Collectors.toList()));
+              .toList());
 
       case EMPLOYEE -> new ChartData(
           null,
@@ -407,7 +465,7 @@ public class AccountActivityRepositoryImpl implements AccountActivityRepositoryC
                           new Amount(
                               Currency.valueOf(tuple.get(5).toString()),
                               (BigDecimal) tuple.get(4))))
-              .collect(Collectors.toList()),
+              .toList(),
           null);
     };
   }
